# realsense-ros

realsense2_camera/: package.xml
realsense2_camera/launch/: rs_camera_with_model.launch
realsense2_camera/src/: base_realsense_node.cpp
realsense2_description/urdf/: _d435.urdf.xacro  test_d435_multiple_cameras.urdf.xacro
